--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -6,10 +6,8 @@
   </head>
   <body>
     <h1>Database</h1>
-    <p>A database stores data in an organized way so that it can be searched and
-      retrieved later.</p>
-    <p> It should contain one or more tables. A table is much like a
-      spreadsheet, in that it's made up of rows and columns.</p>
+    <p> 데이터베이스는 나중에 검색하고 되찾게 할 수 있도록 데이터를 체계적으로 저장합니다.</p>
+    <p> 하나 이상의 테이블을 포함하고 있으며, 표는 행과 열로 구성된다는 점에서 스프레드 시트와 매우 유사합니다.</p>
     <ul>
       <li><strong>Database / Schema</strong></li>
       <li><strong>Table<br>
@@ -21,9 +19,8 @@
     <p><br>
     </p>
     <h2>Database Management Systems (DBMS)</h2>
-    <p>A <dfn>Database Management System</dfn> (DBMS), is a software program
-      that enables the creation and management of databases.</p>
-    <p>Some of the more popular relational database management systems include:</p>
+    <p>데이터베이스 관리 시스템 (DBMS)은 데이터베이스의 생성 및 관리를 가능하게하는 소프트웨어 프로그램입니다.</p>
+    <p>가장 많이 사용되는 관계형 데이터베이스 관리 시스템은 다음과 같습니다.:</p>
     <ul>
       <li>Microsoft Access</li>
       <li>Filemaker</li>
@@ -34,10 +31,9 @@
     <p><br>
     </p>
     <h2>Structured Query Language (SQL)</h2>
-    SQL is the language used to query all databases. It's simple to learn and
-    appears to do very little but is the heart of a successful database
-    application. Understanding SQL and using it efficiently is highly imperative
-    in designing an efficient database application. <br>
+    SQL은 모든 데이터베이스를 쿼리하는 데 사용되는 언어입니다. 
+    배우기 쉽고, 하는 일이 적은 것처럼 보이지만 성공적인 데이터베이스 애플리케이션의 핵심입니다. 
+    SQL을 이해하고 효율적으로 사용하는 것은 효율적인 데이터베이스 응용 프로그램을 설계하는 데 매우 중요합니다. <br>
     <br>
     <br>
     <h2>Practice (command lines vs GUI)</h2>
@@ -255,20 +251,17 @@
       <li>Lists - <strong>ENUM, SET</strong></li>
       <li><a href="https://dev.mysql.com/doc/refman/5.7/en/storage-requirements.html">https://dev.mysql.com/doc/refman/5.7/en/storage-requirements.html</a></li>
     </ul>
-    <p><strong>NULL </strong>is a special marker used in SQL to indicate that <strong>a
-        data value does not exist</strong> in the database. Using <strong>NULL
-      </strong>values <br>
-    </p>
+    <p><strong>NULL</strong> 은 데이터베이스에 데이터 값이 없음을 나타 내기 위해 SQL에서 사용되는 특수 마커입니다. </p>
     <ul>
-      <li>Probably <strong>not </strong>for <strong>required </strong>fields</li>
-      <li><strong>OK </strong>for<strong> optional </strong>fields</li>
+      <li>NULL 값은 <strong>필수(required)</strong> 필드에는 사용하지 않습니다.</li>
+      <li>NULL 값은 <strong>선택(optional)</strong> 필드에 사용합니다.</li>
     </ul>
     <ul>
     </ul>
     <p><strong>Basic SQL</strong></p>
     <ul>
-      <li>SQL is not procedural</li>
-      <li>SQL is <strong>Declarative language</strong> : what we want, not how</li>
+      <li>SQL은 순차적(sequential)이지 않습니다.</li>
+      <li>SQL은 <strong>선언적(declarative)</ strong> 언어 입니다. 방법이 아닌 우리가 원하는 것을 표시합니다./li>
       <li><strong>SELECT ... FROM ... WHERE</strong></li>
       <ul>
         <li>SELECT table_name</li>
