--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -37,15 +37,24 @@
     <br>
     <br>
     <h2>Practice (command lines vs GUI)</h2>
-    <strong>WINDOW ==&gt; START ==&gt; type "cmd" ==&gt; command window opens</strong><br>
+    <ul>
+        <li>WINDOW ==&gt; START ==&gt; type "cmd" ==&gt; command window opens </li>
+      <li>Use any shell terminal 
+        <ul>
+          <li>Git Bash (<a href="https://git-scm.com/downloads">download link</a>)</li>
+          <li>cmder (<a href="https://cmder.net/">download link</a>)</li>
+        </ul>
+      </li>
+    </ul>
+   </strong><br>
     <hr>
         <b>Note: Adding path in MS-DOS</b><br>
     <ul>
-        <li> SET PATH=%PATH%;C:\Bitnami\wampstack-?.?.?-0\mysql\bin </li>
+        <li> SET PATH=%PATH%;C:\xampp\mysql\bin </li>
         or
-        <li> 제어판 => 시스템 및 보안 => 시스템 => 고급 시스템 설정 => 고급:환경변수 => (Dbl-Click) Path => 새로만들기 => C:\Bitname\wampstack-?.?.?-0\mysql\bin</li>
+        <li> 제어판 => 시스템 및 보안 => 시스템 => 고급 시스템 설정 => 고급:환경변수 => (Dbl-Click) Path => 새로만들기 => C:\xampp\mysql\bin</li>
         or 
-        <li> [Window+R] => sysdm.cpl ,3  => 환경변수 => (Dbl-Click) Path => 새로만들기 => C:\Bitname\wampstack-?.?.?-0\mysql\bin</li>
+        <li> [Window+R] => sysdm.cpl ,3  => 환경변수 => (Dbl-Click) Path => 새로만들기 => C:\xampp\mysql\bin</li>
     </ul>
     <hr>
     <br>
