--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -48,7 +48,7 @@
     </ul>
    </strong><br>
     <hr>
-        <b>Note: Adding path in MS-DOS</b><br>
+        <b>Note: Adding path on Window</b><br>
     <ul>
         <li> SET PATH=%PATH%;C:\xampp\mysql\bin </li>
         or
