--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -7,13 +7,13 @@
   <body>
     <h1>Database</h1>
     <p> 데이터베이스는 나중에 검색하고 되찾게 할 수 있도록 데이터를 체계적으로 저장합니다.</p>
-    <p> 하나 이상의 테이블을 포함하고 있으며, 표는 행과 열로 구성된다는 점에서 스프레드 시트와 매우 유사합니다.</p>
+    <p> 하나 이상의 테이블을 포함하고 있으며, 테이블은 행과 열로 구성된다는 점에서 스프레드 시트와 매우 유사합니다.</p>
     <ul>
       <li><strong>Database / Schema</strong></li>
       <li><strong>Table<br>
         </strong></li>
-      <li><strong>Row / Record</strong></li>
-      <li><strong>Column / Field</strong></li>
+      <li><strong>행(Row) / Record</strong></li>
+      <li><strong>열(Column) / Field</strong></li>
     </ul>
     <p><img src="https://cdn.tutsplus.com/net/authors/lalith-polepeddi/relational-databases-for-dummies-fig1.png"></p>
     <p><br>
@@ -25,7 +25,7 @@
       <li>Microsoft Access</li>
       <li>Filemaker</li>
       <li>Microsoft SQL Server</li>
-      <li><strong>MySQL</strong></li>
+      <li><strong>MySQL (~~> MariaDB)</strong> </li>
       <li>Oracle</li>
     </ul>
     <p><br>
@@ -58,8 +58,7 @@
     </ul>
     <hr>
     <br>
-    dos-prompt&gt; <strong>mysql -u root -p</strong><br>
-    Enter password :<strong>******</strong><br>
+    dos-prompt&gt; <strong>mysql -u root</strong><br>
     <br>
     Welcome to the MySQL monitor.&nbsp; Commands end with ; or \g.<br>
     Your MySQL connection id is 2<br>
