--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -74,8 +74,7 @@
     statement.<br>
     <br>
     mysql&gt;<strong>exit</strong><br>
-    dos-prompt&gt; <strong>mysql -u root -p</strong><br>
-    Enter password :<strong>******</strong><br>
+    dos-prompt&gt; <strong>mysql -u root</strong><br>
     ...<br>
     mysql&gt;<strong>SHOW DATABASES;</strong><span style="font-weight: bold;"><br>
     </span>+---------------------+<br>
