--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -38,13 +38,14 @@
     <br>
     <h2>Practice (command lines vs GUI)</h2>
     <ul>
-        <li>WINDOW ==&gt; START ==&gt; type "cmd" ==&gt; command window opens </li>
+        <li>WINDOW : START ==&gt; type "cmd" ==&gt; command window opens </li>
       <li>Use any shell terminal 
         <ul>
           <li>Git Bash (<a href="https://git-scm.com/downloads">download link</a>)</li>
           <li>cmder (<a href="https://cmder.net/">download link</a>)</li>
         </ul>
       </li>
+      <li> MacOS : xampp control panel ==&gt; Open terminal </li>
     </ul>
    </strong><br>
     <hr>
