--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -166,10 +166,10 @@
 +---------------------------------+--------------+------+-----+---------+-------+<br>
     5 rows in set (0.00 sec)<br>
     <br>
-    MariaDB [(none)]&gt;<strong>USE msql;</strong><br>
+    MariaDB [information_schema]&gt;<strong>USE msql;</strong><br>
     MariaDB [msql]&gt;<strong>SHOW COLUMNS FROM schemata;</strong><br>
     ERROR 1146 (42S02): Table 'mysql.schemata' doesn't exist<br>
-    MariaDB&gt;<strong>SHOW COLUMNS FROM information_schema.schemata;</strong><br>
+    MariaDB [msql]&gt;<strong>SHOW COLUMNS FROM information_schema.schemata;</strong><br>
 +---------------------------------+--------------+------+-----+---------+-------+<br>
     |
     Field&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -275,18 +275,18 @@
     </ul>
     <a id="create_db" name="create_db"></a>==============================================================================================<br>
     <br>
-    MariaDB&gt; <strong>CREATE DATABASE my_database;</strong><br>
+    MariaDB [mysql]&gt; <strong>CREATE DATABASE my_database;</strong><br>
     Query OK, 1 row affected (0.00 sec)<br>
-    MariaDB&gt; <strong>CREATE DATABASE my_database;</strong><br>
+    MariaDB [mysql]&gt; <strong>CREATE DATABASE my_database;</strong><br>
     ERROR 1007 (HY000): Can't create database 'my_database'; database exists<br>
-    MariaDB&gt; <strong>DROP DATABASE my_database;</strong><br>
+    MariaDB [mysql]&gt; <strong>DROP DATABASE my_database;</strong><br>
     Query OK, 0 rows affected (0.01 sec)<br>
-    MariaDB&gt; <strong>SHOW CREATE TABLE mysql.help_category;</strong><br>
+    MariaDB [mysql]&gt; <strong>SHOW CREATE TABLE mysql.help_category;</strong><br>
     ...<br>
     <br>
-    MariaDB&gt; <strong>CREATE DATABASE addresses;</strong><br>
-    MariaDB&gt; <strong>USE addresses;</strong><br>
-    MariaDB&gt; <strong>CREATE TABLE people (<br>
+    MariaDB [mysql]&gt; <strong>CREATE DATABASE addresses;</strong><br>
+    MariaDB [mysql]&gt; <strong>USE addresses;</strong><br>
+    MariaDB [addresses]&gt; <strong>CREATE TABLE people (<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -&gt; first_name varchar(50) NOT NULL
       default '',<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -&gt; last_name varchar(50) NOT NULL
@@ -296,7 +296,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -&gt; birthday date DEFAULT NULL,<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -&gt; PRIMARY KEY (first_name,
       last_name));</strong><br>
-    MariaDB&gt;<strong>SHOW TABLES;</strong><br>
+    MariaDB [addresses]&gt;<strong>SHOW TABLES;</strong><br>
     +---------------------+<br>
     | Tables_in_addresses&nbsp; |<br>
     +---------------------+<br>
@@ -318,7 +318,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -&gt; birthday date DEFAULT NULL,<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -&gt; PRIMARY KEY (first_name,
       last_name));<br>
-    </strong>mysql&gt;<strong>SHOW CREATE TABLE people\G<br>
+    </strong>MariaDB [addresses]&gt;<strong>SHOW CREATE TABLE people\G<br>
     </strong>*************************** 1. row ***************************<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Table: people<br>
     Create Table: CREATE TABLE `people` (<br>
@@ -329,7 +329,7 @@
     &nbsp; PRIMARY KEY (`first_name`,`last_name`)<br>
     ) ENGINE=InnoDB DEFAULT CHARSET=utf8<br>
     1 row in set (0.00 sec)<strong><br>
-    </strong><a id="insert_delete" name="insert delete"></a>mysql&gt;<strong>DESC
+    </strong>MariaDB [addresses]&gt;<strong>DESC
       people;<br>
     </strong>+------------+-------------+------+-----+---------+-------+<br>
     | Field&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; | Type &nbsp;
@@ -354,14 +354,14 @@
     |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; |<br>
     +------------+-------------+------+-----+---------+-------+<br>
     4 rows in set (0.01 sec)<strong><br>
-    </strong>mysql&gt;<strong>INSERT INTO people (birthday, first_name,
+    </strong>MariaDB [addresses]&gt;<strong>INSERT INTO people (birthday, first_name,
       last_name, mobile) VALUES('1996-05-12', 'Andrew', 'Thompson', '345-6789');<br>
-    </strong>mysql&gt;<strong>SELECT * FROM people;<br>
+    </strong>MariaDB [addresses]&gt;<strong>SELECT * FROM people;<br>
       <br>
-    </strong>mysql&gt;<strong>INSERT INTO people SET last_name='Ji',
+    </strong>MariaDB [addresses]&gt;<strong>INSERT INTO people SET last_name='Ji',
       first_name='Jun', mobile='123-4567', birthday='1964-12-01';<br>
     </strong>Query OK, 1 row affected (0.01 sec)<strong><br>
-    </strong>mysql&gt;<strong>SELECT * FROM people;<br>
+    </strong>MariaDB [addresses]&gt;<strong>SELECT * FROM people;<br>
     </strong>+------------+-----------+----------+------------+<br>
     | first_name&nbsp;&nbsp; | last_name&nbsp; |&nbsp; mobile &nbsp; &nbsp; |
     birthday&nbsp; &nbsp; &nbsp; |<br>
@@ -373,18 +373,18 @@
     123-4567&nbsp;&nbsp; | 1964-12-01 |<br>
     +------------+-----------+----------+------------+<br>
     2 rows in set (0.00 sec)<strong><br>
-    </strong>MariaDB&gt;<strong>INSERT INTO people (first_name, last_name, mobile)<br>
+    </strong>MariaDB [addresses]&gt;<strong>INSERT INTO people (first_name, last_name, mobile)<br>
       &nbsp;&nbsp;&nbsp;&nbsp;</strong> -&gt; <strong>VALUES ('John', 'Smith',
       '321-9876');<br>
     </strong>Query OK, 1 row affected (0.00 sec)<strong><br>
-    </strong>MariaDB&gt;<strong> INSERT INTO people (first_name, last_name,
+    </strong>MariaDB [addresses]&gt;<strong> INSERT INTO people (first_name, last_name,
       mobile)<br>
       &nbsp;&nbsp;&nbsp;&nbsp; </strong>-&gt;<strong> VALUES<br>
       &nbsp;&nbsp;&nbsp;&nbsp; </strong>-&gt;<strong> ('Bill', 'Gates',
       '987-6543'), ('Steve', 'Thompson', '101-0987');<br>
     </strong>Query OK, 2 rows affected (0.00 sec)<br>
     Records: 2&nbsp; Duplicates: 0&nbsp; Warnings: 0<strong><br>
-    </strong>MariaDB&gt;<strong>SELECT First_NAme fROM people;</strong><br>
+    </strong>MariaDB [addresses]&gt;<strong>SELECT First_NAme fROM people;</strong><br>
     +------------+<br>
     | first_Name &nbsp; |<br>
     +------------+<br>
@@ -395,8 +395,8 @@
     | Steve&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; |<br>
     +------------+<br>
     5 rows in set (0.00 sec)<br>
-    MariaDB&gt;<strong>Select * from people;</strong><br>
-    MariaDB&gt;<strong>SELECT first_name FROM people WHERE last_name='Thompson'</strong>;<br>
+    MariaDB [addresses]&gt;<strong>Select * from people;</strong><br>
+    MariaDB [addresses]&gt;<strong>SELECT first_name FROM people WHERE last_name='Thompson'</strong>;<br>
     +------------+<br>
     | first_name &nbsp; |<br>
     +------------+<br>
@@ -404,36 +404,36 @@
     | Steve&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; |<br>
     +------------+<br>
     2 rows in set (0.00 sec)<br>
-    MariaDB&gt;<strong>UPDATE people SET birthday='1975-01-25' WHERE
+    MariaDB [addresses]&gt;<strong>UPDATE people SET birthday='1975-01-25' WHERE
       first_name='Andrew';</strong><br>
     <br>
-    MariaDB&gt;<strong>UPDATE people SET mobile='123-9999';</strong><br>
+    MariaDB [addresses]&gt;<strong>UPDATE people SET mobile='123-9999';</strong><br>
     <br>
-    MariaDB&gt;<strong>SELECT mobile FROM people;</strong><br>
+    MariaDB [addresses]&gt;<strong>SELECT mobile FROM people;</strong><br>
     <br>
-    MariaDB&gt;<strong>DELETE FROM people WHERE&nbsp; last_name='Ji';<br>
+    MariaDB [addresses]&gt;<strong>DELETE FROM people WHERE&nbsp; last_name='Ji';<br>
     </strong><br>
-    MariaDB&gt;<strong>SELECT * FROM people;</strong><br>
+    MariaDB [addresses]&gt;<strong>SELECT * FROM people;</strong><br>
     <br>
-    MariaDB&gt;<strong>DELETE FROM people WHERE true;</strong><br>
+    MariaDB [addresses]&gt;<strong>DELETE FROM people WHERE true;</strong><br>
     <br>
-    MariaDB&gt;<strong>TRUNCATE TABLE people;</strong><br>
+    MariaDB [addresses]&gt;<strong>TRUNCATE TABLE people;</strong><br>
     <br>
-    MariaDB&gt;<strong>SHOW CREATE TABLE people\G</strong><br>
+    MariaDB [addresses]&gt;<strong>SHOW CREATE TABLE people\G</strong><br>
     <br>
-    MariaDB&gt;<strong>DESC people;</strong><br>
+    MariaDB [addresses]&gt;<strong>DESC people;</strong><br>
     <br>
-    MariaDB&gt;<strong>DROP TABLE people;</strong><br>
+    MariaDB [addresses]&gt;<strong>DROP TABLE people;</strong><br>
     <br>
-    MariaDB&gt;<strong>DROP DATABASE addresses;</strong><br>
+    MariaDB [addresses]&gt;<strong>DROP DATABASE addresses;</strong><br>
     <br>
     <a id="account_manage" name="account_manage"></a>==========================================================================================<br>
     <br>
-    MariaDB&gt;<strong>CREATE DATABASE accounts;</strong><br>
+    MariaDB [(none)]&gt;<strong>CREATE DATABASE accounts;</strong><br>
     <br>
-    MariaDB&gt;<strong>USE accounts;</strong><br>
+    MariaDB [(none)]&gt;<strong>USE accounts;</strong><br>
     <br>
-    MariaDB&gt;<strong>CREATE TABLE member (<br>
+    MariaDB [accounts]&gt;<strong>CREATE TABLE member (<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -&gt;user_num int auto_increment
       primary key,<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -&gt;user_fname varchar(20) NOT NULL
@@ -442,57 +442,57 @@
         NULL default ''</strong>,<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -&gt;user_age int default 0 );</strong><br>
     <br>
-    MariaDB&gt;<strong>SHOW TABLES;</strong><br>
-    MariaDB&gt;<strong>DESC member;</strong><br>
-    MariaDB&gt;<strong>INSERT INTO member( user_fname, user_lname, user_age)
+    MariaDB [accounts]&gt;<strong>SHOW TABLES;</strong><br>
+    MariaDB [accounts]&gt;<strong>DESC member;</strong><br>
+    MariaDB [accounts]&gt;<strong>INSERT INTO member( user_fname, user_lname, user_age)
       VALUES('Jun','Ji', 50);</strong><br>
-    MariaDB&gt;<strong>INSERT INTO member( user_fname, </strong><strong><strong>user_lname,
+    MariaDB [accounts]&gt;<strong>INSERT INTO member( user_fname, </strong><strong><strong>user_lname,
         </strong>user_age)</strong><br>
     &nbsp; &nbsp; &nbsp; <strong>-&gt;VALUES<br>
       &nbsp;&nbsp;&nbsp;&nbsp; -&gt;('Kil Dong','Hong', 32),
       ('Bill','Gates',63), ('Melinda','Gates',60), ('Steve','Jobs',59);<br>
     </strong><br>
-    MariaDB&gt;<strong>SELECT * FROM member;</strong><br>
+    MariaDB [accounts]&gt;<strong>SELECT * FROM member;</strong><br>
     <br>
-    MariaDB&gt;<strong>SELECT * FROM member WHERE user_lname='Gates';</strong><br>
+    MariaDB [accounts]&gt;<strong>SELECT * FROM member WHERE user_lname='Gates';</strong><br>
     <br>
-    MariaDB&gt;<strong>SELECT COUNT(*) FROM member;<br>
+    MariaDB [accounts]&gt;<strong>SELECT COUNT(*) FROM member;<br>
     </strong><br>
-    MariaDB&gt;<strong>SELECT MAX(user_age) FROM member;</strong><br>
+    MariaDB [accounts]&gt;<strong>SELECT MAX(user_age) FROM member;</strong><br>
     <br>
-    MariaDB&gt;<strong>SELECT MIN(user_age) FROM member;<br>
+    MariaDB [accounts]&gt;<strong>SELECT MIN(user_age) FROM member;<br>
     </strong><br>
-    MariaDB&gt;<strong>SELECT SUM(user_age) FROM member;</strong><br>
+    MariaDB [accounts]&gt;<strong>SELECT SUM(user_age) FROM member;</strong><br>
     <br>
-    MariaDB&gt;<strong>SELECT * FROM member WHERE user_lname='Hong' or
+    MariaDB [accounts]&gt;<strong>SELECT * FROM member WHERE user_lname='Hong' or
       user_age=50;</strong><br>
     <br>
-    MariaDB&gt;<strong>SELECT * FROM member ORDER BY user_age ASC;</strong><br>
+    MariaDB [accounts]&gt;<strong>SELECT * FROM member ORDER BY user_age ASC;</strong><br>
     <br>
-    MariaDB&gt;<strong>DELETE FROM member WHERE user_num=1;</strong><br>
+    MariaDB [accounts]&gt;<strong>DELETE FROM member WHERE user_num=1;</strong><br>
     <br>
-    MariaDB&gt;<strong>SELECT * FROM member;</strong><br>
+    MariaDB [accounts]&gt;<strong>SELECT * FROM member;</strong><br>
     <br>
-    MariaDB&gt;<strong>UPDATE member SET user_age=51 WHERE user_num=2;</strong><br>
+    MariaDB [accounts]&gt;<strong>UPDATE member SET user_age=51 WHERE user_num=2;</strong><br>
     <strong><br>
     </strong><br>
     ===============================================&nbsp; 일반 계정 생성 =====<br>
     <br>
-    MariaDB&gt;<strong>CREATE database myuserDB;</strong><br>
-    MariaDB&gt;<strong>USE mysql;</strong><br>
-    MariaDB&gt;<strong>SELECT host, user, authentication_string FROM user;</strong><br>
+    MariaDB [accounts]&gt;<strong>CREATE database myuserDB;</strong><br>
+    MariaDB [accounts]&gt;<strong>USE mysql;</strong><br>
+    MariaDB [accounts]&gt;<strong>SELECT host, user, authentication_string FROM user;</strong><br>
     <br>
-    MariaDB&gt;<del><strong>INSERT user(host, user, password)
+    MariaDB [accounts]&gt;<del><strong>INSERT user(host, user, password)
       VALUES('localhost','myuser',password('123456'));</strong></del><br>
       [<b>Note</b> that from MySQL 5.7.6, the user table uses the authentication_string column only to store the password. In addition, it removed the password column.]
 
       <br>
-    MariaDB&gt;<strong>CREATE USER 'myuser'@'localhost' IDENFIED BY '123456';</strong><br>
-    MariaDB&gt;<strong>FLUSH privileges;</strong><br>
-    MariaDB&gt;<strong>GRANT all on myuserDB.* to myuser@localhost identified by
+    MariaDB [accounts]&gt;<strong>CREATE USER 'myuser'@'localhost' IDENFIED BY '123456';</strong><br>
+    MariaDB [accounts]&gt;<strong>FLUSH privileges;</strong><br>
+    MariaDB [accounts]&gt;<strong>GRANT all on myuserDB.* to myuser@localhost identified by
       '123456';    </strong><br>
-    MariaDB&gt;<strong>SHOW GRANTS FOR myuser@localhost;</strong><br>
-    MariaDB&gt;<strong>exit</strong><br>
+    MariaDB [accounts]&gt;<strong>SHOW GRANTS FOR myuser@localhost;</strong><br>
+    MariaDB [accounts]&gt;<strong>exit</strong><br>
     <br>
     ===============================================&nbsp; MySQL 계정 관리 =====<br>
     <br>
