--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -481,7 +481,7 @@
     MariaDB [accounts]&gt;<strong>UPDATE member SET user_age=51 WHERE user_num=2;</strong><br>
     <strong><br>
     </strong><br>
-    ===============================================&nbsp; 일반 계정 생성 =====<br>
+    =====================================&nbsp; (OPTION) 일반 계정 생성 =====<br>
     <br>
     MariaDB [accounts]&gt;<strong>CREATE database myuserDB;</strong><br>
     MariaDB [accounts]&gt;<strong>USE mysql;</strong><br>
@@ -499,7 +499,7 @@
     MariaDB [accounts]&gt;<strong>SHOW GRANTS FOR myuser@localhost;</strong><br>
     MariaDB [accounts]&gt;<strong>exit</strong><br>
     <br>
-    ===============================================&nbsp; MySQL 계정 관리 =====<br>
+    =====================================&nbsp; (OPTION) MySQL 계정 관리 =====<br>
     <br>
     MS-DOS PROMPT&gt;<strong>mysql -u myuser -p<br>
     </strong>Enter password: ****<strong><br>
