--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -432,7 +432,8 @@
     <br>
     MariaDB [addresses]&gt;<strong>DROP DATABASE addresses;</strong><br>
     <br>
-    <a id="account_manage" name="account_manage"></a>==========================================================================================<br>
+    <a id="account_manage" name="account_manage"></a>
+    ======================================  Practice ======= <br>
     <br>
     MariaDB [(none)]&gt;<strong>CREATE DATABASE accounts;</strong><br>
     <br>
@@ -481,7 +482,7 @@
     MariaDB [accounts]&gt;<strong>UPDATE member SET user_age=51 WHERE user_num=2;</strong><br>
     <strong><br>
     </strong><br>
-    =====================================&nbsp; (OPTION) 일반 계정 생성 =====<br>
+    =====================================  (OPTION) 일반 계정 생성 =====<br>
     <br>
     MariaDB [accounts]&gt;<strong>CREATE database myuserDB;</strong><br>
     MariaDB [accounts]&gt;<strong>USE mysql;</strong><br>
