--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -433,7 +433,7 @@
     MariaDB [addresses]&gt;<strong>DROP DATABASE addresses;</strong><br>
     <br>
     <a id="account_manage" name="account_manage"></a>
-    ======================================  Practice ======= <br>
+  <h2> Practice : Create Table in text-type SQL commands </h2>
     <br>
     MariaDB [(none)]&gt;<strong>CREATE DATABASE accounts;</strong><br>
     <br>
@@ -543,10 +543,10 @@
         <br>
       </strong></strong>&nbsp;<br>
     <br>
+<h2> Practice : Create Table in phpmyadmin </h2>
+<img src="./images/table-structure">
+<img src="./images/table-contents">
     <br>
-    <br>
-    <br>
-    <p><br>
-    </p>
+
   </body>
 </html>
