--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -544,8 +544,8 @@
       </strong></strong>&nbsp;<br>
     <br>
 <h2> Practice : Create Table in phpmyadmin </h2>
-<img src="./images/table-structure">
-<img src="./images/table-contents">
+<img src="./images/table-structure.png">
+<img src="./images/table-contents.png">
     <br>
 
   </body>
