--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -433,7 +433,8 @@
     MariaDB [addresses]&gt;<strong>DROP DATABASE addresses;</strong><br>
     <br>
     <a id="account_manage" name="account_manage"></a>
-  <h2> Practice : Create Table in text-type SQL commands </h2>
+  <hr>
+  <h3> Practice : Create Table in text-type SQL commands </h3>
     <br>
     MariaDB [(none)]&gt;<strong>CREATE DATABASE accounts;</strong><br>
     <br>
@@ -482,6 +483,7 @@
     MariaDB [accounts]&gt;<strong>UPDATE member SET user_age=51 WHERE user_num=2;</strong><br>
     <strong><br>
     </strong><br>
+  <hr>
     =====================================  (OPTION) 일반 계정 생성 =====<br>
     <br>
     MariaDB [accounts]&gt;<strong>CREATE database myuserDB;</strong><br>
@@ -500,6 +502,7 @@
     MariaDB [accounts]&gt;<strong>SHOW GRANTS FOR myuser@localhost;</strong><br>
     MariaDB [accounts]&gt;<strong>exit</strong><br>
     <br>
+  <hr>
     =====================================&nbsp; (OPTION) MySQL 계정 관리 =====<br>
     <br>
     MS-DOS PROMPT&gt;<strong>mysql -u myuser -p<br>
@@ -543,9 +546,10 @@
         <br>
       </strong></strong>&nbsp;<br>
     <br>
-<h2> Practice : Create Table in phpmyadmin </h2>
-<img src="./images/table-structure.png">
-<img src="./images/table-contents.png">
+<hr>
+<h3> Practice : Create Table in phpmyadmin </h3>
+<img src="./images/table-structure.png" width="500">
+<img src="./images/table-contents.png" width="600">
     <br>
 
   </body>
